syntax = "proto3";
package schema;
option go_package = "./schema";

import "google/protobuf/timestamp.proto";

message Session {
    int32 id = 1;
    int32 environment_id = 2;
    string user_id = 3;
    repeated string tags = 4;
     google.protobuf.Timestamp created_at =5;
    optional google.protobuf.Timestamp updated_at = 6;
}

message Request {
    int32 id = 1;
    int32 environment_id = 2;
    optional int32  session_id = 3;
    string user_id = 4;
    string method = 5;
    string name = 6;
    string path = 7;
    optional string headers = 8;
    optional string body = 9;
    google.protobuf.Timestamp called_at = 10;
    google.protobuf.Timestamp created_at = 11;
    optional google.protobuf.Timestamp updated_at = 12;

    optional Session session = 13;
}

message EnvironmentSessions {
    repeated Session sessions = 1;
}